[package]
name = "yagami-decryption-agency"
authors = ["SutandoTsukai181", "de_generate"]
version = "0.2.0"
description = "Decrypts/encrypts Judgment and Lost Judgment PC chara.par archives"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.23.2"
clap = { version = "4.5.47", features = ["derive"] }
dialoguer = "0.12.0"
spinners = "4.1.1"

[profile.release]
lto = "fat"
codegen-units = 1
